# Imitation-Learning-Project

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
scripts/: train.py
src/imitation_learning/: __init__.py
src/imitation_learning/algorithms/: __init__.py  imitation_algorithms.py
src/imitation_learning/envs/: __init__.py  env_wrappers.py
src/imitation_learning/evaluation/: __init__.py  evaluator.py
src/imitation_learning/utils/: __init__.py  utils.py
tests/: test_imitation_learning.py
